"""create batches table

Revision ID: d9006d8e6298
Revises:
Create Date: 2026-05-27 15:16:28.852289

"""

from collections.abc import Sequence

import sqlalchemy as sa
import sqlmodel
from alembic import op


# revision identifiers, used by Alembic.
revision: str = "d9006d8e6298"
down_revision: str | None = None
branch_labels: str | Sequence[str] | None = None
depends_on: str | Sequence[str] | None = None


def upgrade() -> None:
    # ### commands auto generated by Alembic - please adjust! ###
    op.create_table(
        "batches",
        sa.Column("batch_id", sqlmodel.sql.sqltypes.AutoString(), nullable=False),
        sa.Column("arkiv_referenskod", sqlmodel.sql.sqltypes.AutoString(), nullable=True),
        sa.Column("arkiv_titel", sqlmodel.sql.sqltypes.AutoString(), nullable=True),
        sa.Column("volym", sqlmodel.sql.sqltypes.AutoString(), nullable=True),
        sa.Column("rattighetsmarkning_volym", sqlmodel.sql.sqltypes.AutoString(), nullable=True),
        sa.Column("rattighetsmarkning_batch", sqlmodel.sql.sqltypes.AutoString(), nullable=True),
        sa.Column("startdatum", sqlmodel.sql.sqltypes.AutoString(), nullable=True),
        sa.Column("slutdatum", sqlmodel.sql.sqltypes.AutoString(), nullable=True),
        sa.Column("htrad_tidigare", sqlmodel.sql.sqltypes.AutoString(), nullable=True),
        sa.Column("page_count", sa.Integer(), nullable=True),
        sa.Column("iiif_endpoint", sqlmodel.sql.sqltypes.AutoString(), nullable=True),
        sa.Column("manifest_status", sa.Enum("ok", "http_403", "http_400", "error", "pending", name="manifeststatus"), nullable=True),
        sa.Column("manifest_error", sqlmodel.sql.sqltypes.AutoString(), nullable=True),
        sa.Column("fetched_at", sqlmodel.sql.sqltypes.AutoString(), nullable=True),
        sa.Column("cached_pages", sa.Integer(), nullable=False),
        sa.Column("transcribed_pages", sa.Integer(), nullable=False),
        sa.Column("htr_status", sa.Enum("pending", "cached", "partial", "done", "verification_failed", name="htrstatus"), nullable=True),
        sa.Column("started_at", sqlmodel.sql.sqltypes.AutoString(), nullable=True),
        sa.Column("finished_at", sqlmodel.sql.sqltypes.AutoString(), nullable=True),
        sa.Column("last_error", sqlmodel.sql.sqltypes.AutoString(), nullable=True),
        sa.Column("last_synced_at", sqlmodel.sql.sqltypes.AutoString(), nullable=True),
        sa.Column("chunk_id", sa.Integer(), nullable=True),
        sa.Column("chunk_total", sa.Integer(), nullable=True),
        sa.Column("current_rayjob_id", sqlmodel.sql.sqltypes.AutoString(), nullable=True),
        sa.Column("current_rayjob_submitted_at", sqlmodel.sql.sqltypes.AutoString(), nullable=True),
        sa.PrimaryKeyConstraint("batch_id"),
    )
    # ### end Alembic commands ###


def downgrade() -> None:
    # ### commands auto generated by Alembic - please adjust! ###
    op.drop_table("batches")
    # ### end Alembic commands ###
